force-app/main/default/objects/Actual_Sales_History__c/Actual_Sales_History__c.object-meta.xml
<CustomObject>
    <description>Historic report to store, display and report on historic deal summaries with customers</description>
    <label>Actual Sales History</label>
    <nameField>
        <displayFormat>Deal Summary No. {0000}</displayFormat>
        <label>Deal Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Sales History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>