force-app/main/default/objects/Actual_Sales_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATEVALUE( TEXT(Year__c)&amp;&quot;-&quot;&amp;
CASE( Month__c,
&apos;Jan&apos;,&apos;01&apos;,
&apos;Feb&apos;,&apos;02&apos;,
&apos;Mar&apos;,&apos;03&apos;,
&apos;Apr&apos;,&apos;04&apos;,
&apos;May&apos;,&apos;05&apos;,
&apos;Jun&apos;,&apos;06&apos;,
&apos;Jul&apos;,&apos;07&apos;,
&apos;Aug&apos;,&apos;08&apos;,
&apos;Sep&apos;,&apos;09&apos;,
&apos;Oct&apos;,&apos;10&apos;,
&apos;Nov&apos;,&apos;11&apos;,
&apos;Dec&apos;,&apos;12&apos;,
&apos;Error&apos;

)



&amp;&quot;-01&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>