force-app/main/default/objects/Actual_Sales_History__c/fields/Market_Code__c.field-meta.xml
<CustomField>
    <fullName>Market_Code__c</fullName>
    <label>Market Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>NM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>