force-app/main/default/objects/Actual_Sales_History__c/fields/OM_AccountText__c.field-meta.xml
<CustomField>
    <fullName>OM_AccountText__c</fullName>
    <label>Account Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>