force-app/main/default/objects/Actual_Sales_History__c/fields/OM_MaterialCodeText__c.field-meta.xml
<CustomField>
    <fullName>OM_MaterialCodeText__c</fullName>
    <label>Material Code Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>