force-app/main/default/objects/Actual_Sales_History__c/fields/OM_ModelRef__c.field-meta.xml
<CustomField>
    <fullName>OM_ModelRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Actual Sales History</relationshipLabel>
    <relationshipName>Actual_Sales_History</relationshipName>
    <type>Lookup</type>
</CustomField>