force-app/main/default/objects/Actual_Sales_History__c/fields/OM_Name__c.field-meta.xml
<CustomField>
    <fullName>OM_Name__c</fullName>
    <formula>OM_ModelRef__r.ProductCode + &apos;_&apos;+  TEXT(Year__c)  +&apos;_&apos;+ TEXT(Month__c)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>