force-app/main/default/objects/Actual_Sales_History__c/fields/OM_VID_EuroTonneVar__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_EuroTonneVar__c</fullName>
    <label>Euro/Ton DAP Var</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>