force-app/main/default/objects/Actual_Sales_History__c/fields/OM_VID_EuroTonneVarPercent__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_EuroTonneVarPercent__c</fullName>
    <label>Euro/Ton DAP Variation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>