force-app/main/default/objects/Actual_Sales_History__c/fields/OM_VID_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Revenue__c</fullName>
    <formula>Revenue__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>