force-app/main/default/objects/Actual_Sales_History__c/fields/OM_VID_RevenueVar__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_RevenueVar__c</fullName>
    <formula>RevenueVar__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Variation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>