force-app/main/default/objects/Actual_Sales_History__c/fields/PrecioFFVarPercent__c.field-meta.xml
<CustomField>
    <fullName>PrecioFFVarPercent__c</fullName>
    <label>Euro/Ton FF Variation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>