force-app/main/default/objects/Actual_Sales_History__c/fields/Revenue_Per_Tonne__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Per_Tonne__c</fullName>
    <formula>IF(Tonnes__c=0, Revenue__c, Revenue__c /  Tonnes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Per Tonne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>