force-app/main/default/objects/Actual_Sales_History__c/fields/RevenueVarPercentage__c.field-meta.xml
<CustomField>
    <fullName>RevenueVarPercentage__c</fullName>
    <label>Revenue Variation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>