force-app/main/default/objects/Actual_Sales_History__c/fields/SAP_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Material Code</label>
    <referenceTo>SAP_Material_Code__c</referenceTo>
    <relationshipLabel>Actual Sales History</relationshipLabel>
    <relationshipName>Actual_Sales_History_del</relationshipName>
    <type>Lookup</type>
</CustomField>