force-app/main/default/objects/Actual_Sales_History__c/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <description>Does the record fall in this calendar year?</description>
    <formula>IF(YEAR(Date__c)=YEAR(TODAY()),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year</label>
    <type>Checkbox</type>
</CustomField>