force-app/main/default/objects/Actual_Sales_History__c/fields/Tonnes__c.field-meta.xml
<CustomField>
    <fullName>Tonnes__c</fullName>
    <label>Tonnes</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>