force-app/main/default/objects/Actual_Sales_History__c/fields/TonnesVar__c.field-meta.xml
<CustomField>
    <fullName>TonnesVar__c</fullName>
    <label>Tonnes Variation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>