force-app/main/default/objects/Actual_Sales_History__c/fields/Volume000sPrev__c.field-meta.xml
<CustomField>
    <fullName>Volume000sPrev__c</fullName>
    <label>Volume (000&apos;s) Previous</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>