force-app/main/default/objects/Actual_Sales_History__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Revenue__c</columns>
    <columns>Tonnes__c</columns>
    <columns>Volume_000_s__c</columns>
    <columns>Revenue_Per_Tonne__c</columns>
    <columns>Bottle__c</columns>
    <columns>Market__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>