force-app/main/default/objects/Actual_Sales_History__c/listViews/EN60_2022.listView-meta.xml
<ListView>
    <fullName>EN60_2022</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Account__c</columns>
    <columns>Bottle__c</columns>
    <columns>Item__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Revenue__c</columns>
    <columns>Tonnes__c</columns>
    <columns>Volume_000_s__c</columns>
    <columns>Revenue_Per_Tonne__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>equals</operation>
        <value>EN60</value>
    </filters>
    <label>EN60 2022</label>
</ListView>