force-app/main/default/objects/Actual_Sales_History__c/listViews/EN_60_2021.listView-meta.xml
<ListView>
    <fullName>EN_60_2021</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Account__c</columns>
    <columns>Bottle__c</columns>
    <columns>Item__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Revenue__c</columns>
    <columns>Tonnes__c</columns>
    <columns>Volume_000_s__c</columns>
    <columns>Revenue_Per_Tonne__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>equals</operation>
        <value>EN60</value>
    </filters>
    <label>EN 60 2021</label>
</ListView>