force-app/main/default/objects/Actual_Sales_History__c/listViews/VD30_2022.listView-meta.xml
<ListView>
    <fullName>VD30_2022</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>equals</operation>
        <value>VD30</value>
    </filters>
    <label>VD30 2022</label>
</ListView>