force-app/main/default/objects/Actual_Sales_History__c/listViews/X11_2018.listView-meta.xml
<ListView>
    <fullName>X11_2018</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Revenue__c</columns>
    <columns>Tonnes__c</columns>
    <columns>Volume_000_s__c</columns>
    <columns>Revenue_Per_Tonne__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <filters>
        <field>Month__c</field>
        <operation>equals</operation>
        <value>Nov</value>
    </filters>
    <label>11/2018</label>
</ListView>