force-app/main/default/objects/Actual_Sales_History__c/listViews/x2015.listView-meta.xml
<ListView>
    <fullName>x2015</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Revenue__c</columns>
    <columns>Tonnes__c</columns>
    <columns>Volume_000_s__c</columns>
    <columns>Revenue_Per_Tonne__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2015</value>
    </filters>
    <label>2015</label>
</ListView>