force-app/main/default/objects/Actual_Sales_History__c/listViews/X2020.listView-meta.xml
<ListView>
    <fullName>X2020</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Account__c</columns>
    <columns>Bottle__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Revenue__c</columns>
    <columns>Tonnes__c</columns>
    <columns>Volume_000_s__c</columns>
    <columns>Revenue_Per_Tonne__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>notContain</operation>
        <value>VD30,EN60</value>
    </filters>
    <filters>
        <field>Month__c</field>
        <operation>equals</operation>
        <value>Apr</value>
    </filters>
    <label>2020</label>
</ListView>